// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`packem package.json exports > should generate proper assets with js based on the package.json exports default > cjs output 1`] = `
"'use strict';

Object.defineProperties(exports, { __esModule: { value: true }, [Symbol.toStringTag]: { value: 'Module' } });

const myMod = require('my-mod');

const _interopDefaultCompat = e => e && typeof e === 'object' && 'default' in e ? e.default : e;

const myMod__default = /*#__PURE__*/_interopDefaultCompat(myMod);

var __defProp = Object.defineProperty;
var __name = (target, value) => __defProp(target, "name", { value, configurable: true });
const index = "exports-sugar-default";
function method() {
  return myMod__default.test();
}
__name(method, "method");

exports.default = index;
exports.method = method;
"
`;

exports[`packem package.json exports > should generate proper assets with js based on the package.json exports default > mjs output 1`] = `
"import myMod from 'my-mod';

var __defProp = Object.defineProperty;
var __name = (target, value) => __defProp(target, "name", { value, configurable: true });
const index = "exports-sugar-default";
function method() {
  return myMod.test();
}
__name(method, "method");

export { index as default, method };
"
`;

exports[`packem package.json exports > should work with ESM package with CJS main field > cjs output 1`] = `
"'use strict';

Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });

const value = "cjs";

exports.value = value;
"
`;

exports[`packem package.json exports > should work with ESM package with CJS main field > mjs output 1`] = `
"const value = "cjs";

export { value };
"
`;
